Fix various layout bugs due to the new grid layout

--- a/src/styles/Components/Card.module.scss
+++ b/src/styles/Components/Card.module.scss
@@ -53,11 +53,14 @@
   &__content {
     grid-row: 2 / 4;
     grid-column: 1;
-    background-color: rgba($background-color, 0.7);
+    background: linear-gradient(
+      180deg,
+      rgba($tertiary-color, 0.85),
+      rgba($background-color, 0.7)
+    );
     text-align: center;
     padding: 60px 1rem 1rem 1rem;
     @include roundedBorder;
-    @include boxShadow;
   }
 
   h2 {
