--- a/src/styles/Create.module.scss
+++ b/src/styles/Create.module.scss
@@ -19,7 +19,7 @@
 
   .create__topbar {
     padding: 0.6rem;
-    max-width: 1024px;
+    max-width: 1200px;
     margin: 0 auto;
     text-align: center;
 
@@ -31,7 +31,7 @@
         &::after {
           cursor: default;
           display: inline-block;
-          width: 25px;
+          width: 15px;
           height: 3px;
           border-top: 2px solid $on-background-color;
           margin: 0 0.5rem;
