--- a/src/styles/auth/Login.module.scss
+++ b/src/styles/auth/Login.module.scss
@@ -1,49 +1,49 @@
-@import '../variables.module';
+@import "../variables.module";
 
 .form {
-    width: 450px;
-    margin: 2rem auto;
-    padding: 5rem 1.5rem;
-    background-image: url('/images/background1.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    gap: 0.8rem;
+  max-width: 450px;
+  margin: 1rem auto;
+  padding: 5rem 1.5rem;
+  background-image: url("/images/background1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
 }
 
 .form__row {
-    text-transform: uppercase;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .form__input {
-     flex-grow: 1;
-     height: 2rem;
-     @include roundedBorder;
-     border: 0;
+  flex-grow: 1;
+  height: 2rem;
+  @include roundedBorder;
+  border: 0;
 }
 
 .form__label {
-    flex-basis: 150px;
+  flex-basis: 150px;
 }
 
 .btn {
-    text-transform: uppercase;
-    font-weight: 700;
-    @include roundedBorder;
-    padding: 0.6rem 1.2rem;
-    border: 0;
-    transition: all 500ms ease-in;
+  text-transform: uppercase;
+  font-weight: 700;
+  @include roundedBorder;
+  padding: 0.6rem 1.2rem;
+  border: 0;
+  transition: all 500ms ease-in;
 
-    &.primary {
-        background-color: $secondary-color;
-        color: $on-background-color;
+  &.primary {
+    background-color: $secondary-color;
+    color: $on-background-color;
 
-        &:hover {
-            background-color: darken($secondary-color, 15);
-        }
+    &:hover {
+      background-color: darken($secondary-color, 15);
     }
+  }
 }
